node js publish

--- a/.github/workflows/node-js-all.yml
+++ b/.github/workflows/node-js-all.yml
@@ -1,18 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI and Publish
+name: Node.js CI and Test
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    types: [closed]
     branches:
-      - main
+      - '*'
+      # - '!main' # If we added this we would get all branches _except_ main
 
 jobs:
-  build-test-publish:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -24,12 +22,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    # registry and Scope needed for Publish later
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: 'https://npm.pkg.github.com'
-        scope: '@infinityworks'
+        scope: '@School-Of-Tech-Futures-UK'
 
     - name: Cache dependencies
       uses: actions/cache@v1
@@ -38,7 +37,6 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
-
     - name: npm make package-lock if missing
       working-directory: ./pokemon-app
       run: npm i --package-lock-only
@@ -54,17 +52,3 @@ jobs:
     - name: npm test
       working-directory: ./pokemon-app
       run: npm test
-
-    - name: show package version
-      working-directory: ./pokemon-app
-      run: |
-        PACKAGE_VERSION=$(cat package.json \
-                  | grep '"version":' \
-                  | sed -E 's/.*"([^"]+)".*/\1/')
-        echo "PACKAGE_VERSION=${PACKAGE_VERSION}"
-
-    - name: npm publish
-      working-directory: ./pokemon-app
-      run: npm publish --access public
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
